--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -10,8 +10,8 @@
 
     </div>
     <!-- End - drawer -->
-    <header class="layout__header layout__header-mobile">
-    <div class=" layout__header-row layout__header-row--bottom  visible-xs">
+    <header class="layout__header layout__header-mobile visible-xs">
+    <div class=" layout__header-row layout__header-row--bottom">
             {% if page.mobile_header_navigation %}
                 {{ page.mobile_header_navigation}}
             {% endif %}
@@ -77,7 +77,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar long"></span>
           </button>
-        <div>
+        </div>
             {% if page.header_navigation %}
                 {{ page.header_navigation }}
             {% endif %}
