--- a/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
@@ -6,6 +6,9 @@
 
     <!-- Begin - logo -->
     <div class="banner-logo">
+        <svg width='100%' height='100%' viewBox="0 0 100 100" preserveAspectRatio="none">
+        <polygon points="107 0, 0 100, 100 100" fill="rgba(0, 188, 255, 0.85)" id="svgoverlay" />
+    </svg>
         <div class="banner-logo-image"></div>
     </div>
     <!-- End - logo -->
