--- a/docroot/themes/custom/site/src/scss/custom/_overrides.scss
+++ b/docroot/themes/custom/site/src/scss/custom/_overrides.scss
@@ -6,3 +6,21 @@ body {
 #drupal-live-announce {
   display: none;
 }
+
+.cover-overlay {
+    
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    position: absolute;
+}
+
+
+@media (min-width: 1200px) {
+
+    .layout__footer-top-outer .container {
+    
+    width: 80%;
+}
+    
+}
