--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -15,6 +15,17 @@
 // --------------------------------------------------
 
 // Banner
+
+.path-frontpage div[role=heading] {
+    
+    display: none;
+}
+
+.path-frontpage .banner {
+    
+    margin-bottom: -70px;
+}
+
 .banner {
   position: relative;
   background-color: #fff;
@@ -38,7 +49,7 @@
       letter-spacing: 0.055em;
       text-transform: uppercase;
       color: #fff;
-      font-weight: bold;
+      font-weight: 500;
         font-family: 'Open Sans', sans-serif;
     }
 
@@ -72,12 +83,13 @@
     right: 0;
     width: 500px;
     height: 100%;
-    background: rgba(0, 188, 255, 0.7);
+    background: transparent;
     z-index: 100;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    clip-path: polygon(107% 0, 0% 100%, 100% 100%);
+  
+      
 
     .banner-logo-image {
       position: absolute;
@@ -88,6 +100,7 @@
       width: 250px;
       height: 250px;
     }
+     
   }
 }
 
