--- a/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
@@ -36,6 +36,8 @@ $md-footer-bottom-padding-top-bottom: 55px;
 .layout__footer {
   background-color: $footer-background-color;
   border-top: 0;
+     font-weight: bold;
+      font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding-bottom: 0;
   @include angled_background('before');
@@ -47,6 +49,9 @@ $md-footer-bottom-padding-top-bottom: 55px;
 
   .block,
   nav {
+      
+       font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
 
     h1,
     h2,
@@ -54,7 +59,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
 
       &,
       &.block-title {
-        font-weight: 700;
+        font-weight: 500;
         font-size: $font-size-h4;
         color: #fff;
         text-transform: uppercase;
@@ -67,9 +72,15 @@ $md-footer-bottom-padding-top-bottom: 55px;
 
   p {
     color: #fff;
+        font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
   }
 
   a {
+      
+      font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
+      
 
     &,
     &:hover {
@@ -81,8 +92,13 @@ $md-footer-bottom-padding-top-bottom: 55px;
 
     > li {
 
+         font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
+        
       a {
         padding: 6px 0;
+            font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
 
         &,
         &:hover {
@@ -120,6 +136,8 @@ $md-footer-bottom-padding-top-bottom: 55px;
     margin: 0;
     padding: 0;
     text-transform: uppercase;
+        font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
   }
 
   .layout__footer-bottom-copyright {
@@ -137,6 +155,8 @@ $md-footer-bottom-padding-top-bottom: 55px;
       &:hover {
         font-size: 26px;
         color: #fff;
+            font-weight: 500;
+      font-family: 'Open Sans', sans-serif;
       }
     }
 
