--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_video.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_video.scss
@@ -24,6 +24,8 @@ border:3px solid transparent;
 // Video
 .paragraph--type--video {
 
+    padding-bottom: 200px;
+    
   .field--name-field-heading,
   .field--name-field-description {
     margin-bottom: 40px;
