--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -264,7 +264,7 @@
   justify-content: flex-start;
   align-items: center;
   margin-right: -150px;
-    background-image: url('http://svgshare.com/i/1Dv.svg');
+    background-image: url('http://svgshare.com/i/1GX.svg');
     background-repeat: no-repeat;
     background-size: 275%;
     background-position: 75px 0px;
