--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -240,6 +240,7 @@
   display: flex;
   flex-direction: row;
   z-index: 999999;
+    overflow: hidden;
   margin: 0;
   -webkit-box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);
