--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -222,6 +222,8 @@ h1, h2, h3, h4, h5, h6 {
 
     }
 
+#block-popup-cta { overflow: hidden; }
+
 .banner-title {
     
     font-weight: bold!important;
