--- a/docroot/themes/custom/site/src/scss/custom/components/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_angled-background.scss
@@ -178,6 +178,8 @@ $angled-background-color-secondary: $brand-secondary;
       &:before {
         margin-top: -$xs-angled-background-padding-top;
         margin-bottom: -$xs-angled-background-padding-bottom;
+        margin-left: -100%;
+        margin-right: -100%;
       }
     }
   }
@@ -188,6 +190,8 @@ $angled-background-color-secondary: $brand-secondary;
     .angled-background-image-wrapper {
       margin-top: -$xs-angled-background-padding-top;
       margin-bottom: -$xs-angled-background-padding-bottom;
+      margin-left: -100%;
+      margin-right: -100%;
     }
   }
 }
