Alignment fix on Frontpage

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -224,6 +224,13 @@ h1, h2, h3, h4, h5, h6 {
 
 #block-popup-cta { overflow: hidden; }
 
+#js-view-dom-id-82069330c64efa0f51464bf2cd93f29f3260f65b3d616fc2e014ecdb526401d8 {
+    
+    padding-top: 40px;
+}
+
+.paragraph--type--class-packages .angled-background-inner { margin-bottom: 100px; }
+
 .banner-title {
     
     font-weight: bold!important;
