--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -165,6 +165,11 @@ $md-page-layout-content-inner-padding-bottom: 60px;
   font-family: 'Open Sans', sans-serif;
   color: #000;
 }
+
+.fpnews-content p {
+    
+    font-size: 0.8em;
+}
 .fpnews-title a{
   color:#000;
      font-size: $font-size-small;
