Fontsize on News

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -168,7 +168,7 @@ $md-page-layout-content-inner-padding-bottom: 60px;
 
 .fpnews-content p {
     
-    font-size: 0.8em;
+    font-size: 0.7em!important;
 }
 .fpnews-title a{
   color:#000;
