--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -315,6 +315,13 @@ h1, h2, h3, h4, h5, h6 {
   background-color:#ffc400;
 }
 
+.fagpakker-headline a {
+    
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.5em;
+    font-size: 20px;
+    font-weight: 600;
+}
 
 .fagpakker-container:hover > .fagpakker-hovering {
 
