--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -323,6 +323,14 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
 }
 
+.fagpakker-hovering p {
+    
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.5em;
+    font-size: 12px;
+    font-weight: 600;
+}
+
 .fagpakker-container:hover > .fagpakker-hovering {
 
   opacity: 1!important;
