Font-weight fix

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -328,7 +328,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
     line-height: 1.5em;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 .fagpakker-container:hover > .fagpakker-hovering {
