--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -26,6 +26,15 @@
     margin-bottom: -70px;
 }
 
+.styleguide-banner {
+    
+    background-color: #00bcff;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .banner {
   position: relative;
   background-color: #fff;
