--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -6,6 +6,8 @@
 // | - .layout__content-inner
 // |
 
+@import '_page-elements.scss';
+
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
