--- a/docroot/themes/custom/site/templates/block/block--views-block--vih-teacher-teaches-classes-block-1.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--views-block--vih-teacher-teaches-classes-block-1.html.twig
@@ -53,10 +53,10 @@
     'clearfix',
   ]
 %}
-<div class="row" style="background-color: #00bcff; color: #fff !important; padding-left: 50px; padding-right: 50px; padding-top: 25px; padding-bottom: 50px; border-top:25px solid #fff;">
+<div class="row teacher-teaches-row">
   {{ title_prefix }}
   {% if label %}
-    <h2 style="color:#fff;">{{ label }}</h2>
+    <h2>{{ label }}</h2>
   {% endif %}
   {{ title_suffix }}
 
