--- a/docroot/themes/custom/site/templates/field/field--paragraph--vih-related-classes.html.twig
+++ b/docroot/themes/custom/site/templates/field/field--paragraph--vih-related-classes.html.twig
@@ -57,17 +57,8 @@
     <div{{ attributes.addClass(classes, 'field--items') }}>
       <div class="row">
       {% for item in items %}
-        <div class="col-lg-3" style="background-image: url('http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-fodbold.jpg'); height:125px; border:15px solid #fff; display: flex; flex-direction: column;">
-          <span style="
-margin-top: auto;
-background: #f00;
-padding-left: 10px;
-padding-right: 10px;
-margin-right: -15px;
-margin-left: -15px;
-padding-bottom: 5px;
-padding-top: 5px;
-">{{ item.content }}</span>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 related-classes-col">
+          <span class="related-classes-span">{{ item.content }}</span>
         </div>
       {% endfor %}
       </div>
