CSS/Twig changes related to VI-66 & VI-33

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -1,6 +1,6 @@
 <!-- Begin - wrapper -->
 <div class="layout__wrapper layout--fixed-header">
-
+    {{ drupal_block('popup_cta') }}
     <!-- Begin - drawer -->
     <div class="layout__drawer" aria-hidden="true">
 
