--- a/docroot/themes/custom/site/templates/page/page--node--13.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--node--13.html.twig
@@ -57,6 +57,45 @@
                 <div class="angled-background-color angled-background-color-white">
                     <div class="angled-background-inner">
                         <div class="container">
+                          
+                          
+                          <section id="fonts">
+                                <h3>Fonts</h3>
+                                <hr>
+                                 
+                              <h1 style="line-height: inherit;">h1: abcdefghijklmnopqrstuvwxyzæøå</h1>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 3.157em;</code></div>
+                              <br>
+                
+                              <h2>h2: abcdefghijklmnopqrstuvwxyzæøå</h2>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 2.369em;</code></div>
+                              <br>
+                              <h3>h3: abcdefghijklmnopqrstuvwxyzæøå</h3>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 1.777em;</code></div>
+                              <br>
+                              <h4>h4: abcdefghijklmnopqrstuvwxyzæøå</h4>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 1.333em;</code></div>
+                              <br>
+                              <h5>h5: abcdefghijklmnopqrstuvwxyzæøå</h5>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 1em;</code></div>
+                              <br>
+                              <h6>h6: abcdefghijklmnopqrstuvwxyzæøå</h6>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 0.8125em;</code></div>
+                              <br>
+                              <br>
+                              
+                              <h3>Font colors</h3>
+                                <hr>
+                              <h4 class="f-light">This is a light color</h4>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>class="f-light"</code></div>
+                              <br>
+                              <h4 class="f-dark">This is a dark color</h4>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>class="f-dark"</code></div>
+                              <br>
+                              <h4 class="f-pale" style="background-color: #00bcff;">This is a white color</h4>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>class="f-pale"</code></div>
+                          </section>
+                             <div class="breaker"></div>
                            
              <section id="accordians">
     <h3>Accordians</h3>
@@ -324,11 +363,22 @@
                 
                   <h5>Code guidelines</h5>
                 <div class="codebox" style="height:auto;"> <code>
-    &lt;div class="field--name-field-link">
+   
     <br>
 <br>&lt;a class="btn" href="{{insert_link}}">Læs mere&lt;/a>
-<br><br>&lt;/div>
+<br><br>
      </code> </div>
+           
+           <br>
+           
+           <a class="btn-simple" href="#">Læs mere</a>
+           
+            <div class="codebox" style="height:auto;"> <code>
+    
+<br>&lt;a class="btn-simple" href="{{insert_link}}">Læs mere&lt;/a>
+<br><br>
+     </code> </div>
+           
             </section>
                            
                            
