--- a/docroot/themes/custom/site/templates/page/page--node--13.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--node--13.html.twig
@@ -82,6 +82,8 @@
                               <h6>h6: abcdefghijklmnopqrstuvwxyzæøå</h6>
                               <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 0.8125em;</code></div>
                               <br>
+                              <p>Paragraph: Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                              <div class="codebox" style="height: auto;padding:10px;"><code>font-family: "Open Sans", Sens-serif;<br>font-size: 1em;</code></div>
                               <br>
                               
                               <h3>Font colors</h3>
