CSS & Twig updates

--- a/docroot/themes/custom/site/templates/field/field--taxonomy-term--field-related-teachers--vih-class.html.twig
+++ b/docroot/themes/custom/site/templates/field/field--taxonomy-term--field-related-teachers--vih-class.html.twig
@@ -52,16 +52,16 @@
     label_display == 'visually_hidden' ? 'sr-only',
   ]
 %}
+
+>>> HER {{ content.field_user_birthday }} HER <<<<
+>>> HER {{ content.field_user_birthday[0] }} HER <<<<
+
 {% if label_hidden %}
   {% if multiple %}
     <div{{ attributes.addClass(classes, 'field--items') }}>
-      <div class="row">
       {% for item in items %}
-        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 related-classes-col">
-          <span class="related-classes-span">{{ item.content }}</span>
-        </div>
+        <div{{ item.attributes.addClass('field--item') }}>{{ item.content }}</div>
       {% endfor %}
-      </div>
     </div>
   {% else %}
     {% for item in items %}
@@ -82,3 +82,4 @@
     {% endif %}
   </div>
 {% endif %}
+
