--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -479,3 +479,26 @@ flex-direction: column;
     }
   }
 }
+.teacher-c-desc{
+  background-color: #f1f1f1 !important;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  border-top:25px solid #fff;
+}
+
+.view-vih-teacher-teaches-classes .views-field-name-1{
+  background: #00a5e2;
+  min-height: 85px;
+  text-align: center;
+  padding-top: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+
+}
+
+.navbar{
+  border-radius: 0px;
+  margin-bottom: 0px;
+}
