--- a/docroot/themes/custom/site/templates/user/user--full.html.twig
+++ b/docroot/themes/custom/site/templates/user/user--full.html.twig
@@ -19,14 +19,14 @@
 <article{{ attributes }}>
 
   <div class="row" style="background-color: #00a5e2; color: #fff !important; padding-left: 50px; padding-right: 50px; padding-top: 25px; padding-bottom: 50px;">
+    <div class="col-lg-8 col-md-8">
     <h2 style="color:#fff; font-weight: bold;">{{ content.field_user_name_first[0] }} {{ content.field_user_name_last[0] }}, {{ content.field_vih_user_title[0] }}</h2>
-    <div class="col-lg-9 col-md-9">
         {{ content.field_vih_user_about[0] }}
       <h3 style="color:#fff; font-weight: bold;">Kvalifikationer</h3>
         {{ content.field_user_qualifications[0] }}
     </div>
 
-    <div class="col-lg-3 col-md-3">
+    <div class="col-lg-4 col-md-4" style="padding-top:22px;">
         {{ content.field_vih_user_photo[0] }}
     </div>
   </div>
