--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_angled-background.scss
@@ -26,7 +26,7 @@
     
     font-size: 0.8em;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 600!important;
+    font-weight: normal;
 }
 
 // Image
