--- a/docroot/themes/custom/site/templates/field/field--paragraph--vih-qualifications.html.twig
+++ b/docroot/themes/custom/site/templates/field/field--paragraph--vih-qualifications.html.twig
@@ -57,13 +57,13 @@
   {% if multiple %}
     <ul>
       {% for item in items %}
-        <li>{{ item.content }}</li>
+        <li style="color:#fff;">{{ item.content }}</li>
       {% endfor %}
     </ul>
   {% else %}
       <ul>
     {% for item in items %}
-      <li>{{ item.content }}</li>
+      <li style="color:#fff;">{{ item.content }}</li>
     {% endfor %}
       </ul>
   {% endif %}
