--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -510,3 +510,137 @@ flex-direction: column;
 ul li{
   color: #888;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Fagpakker oversigt */
+
+.fp-container {
+
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/circles-and-roundabouts.png");
+  background-position: -90px 0px;
+  transition: 400ms;
+  padding: 0;
+  cursor: pointer;
+  margin-bottom:30px;
+}
+
+
+
+.fp-container:hover > .fp-hovering {
+
+  opacity: 1!important;
+  transition: 400ms;
+  padding: 0;
+}
+
+
+.fp-container:hover .fp-overlay {
+  background: rgba(30,125,150,0.898);
+
+}
+
+.fp-container { overflow: hidden; }
+
+.fp-container .fp-overlay {
+  width: 100%;
+  height: 20vh;
+  position: relative;
+  background: #00bcff;
+  bottom: 0;
+  -webkit-clip-path: polygon(0 70%, 100% 50%, 100% 100%, 0% 100%);
+  clip-path: polygon(0 70%, 100% 50%, 100% 100%, 0% 100%);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 1;
+  transition: 300ms;
+
+}
+
+
+.fp-container:hover .fp-overlay:hover {
+  background: #00a5e2;
+}
+
+
+.fp-overlay h1 {
+
+  font-family: lato;
+  color: #fff;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;;
+  font-size: 13px;
+  bottom: 0;
+  padding: 0px;
+  padding-right: 10px;
+  z-index: 2;
+  text-align:right;
+}
+
+.fp-overlay a {
+
+  color: #fff;
+
+}
+
+
+.fp-hovering {
+
+  height: 20vh;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 0;
+  display: inline-flex;
+  position: absolute;
+  opacity: 0;
+  transition: 400ms;
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+
+.fp-hovering p {
+
+  color: #fff;
+  font-family: Lato, sans-serif;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 0.1em;
+  line-height: 19px;
+  width: 100%;
+  padding: 0;
+  text-align: left;
+  padding-top: 15px;
+  padding-left: 18px;
+}
+
+.fp-bg-container {
+  background-color: #f1f1f1 !important;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  border-top: 25px solid #fff;
+}
