--- a/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-related-classes.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-related-classes.html.twig
@@ -16,7 +16,9 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 
 
         <div class="container">
+            <div class="row">
             {{ content }}
+            </div>
         </div>
 
 </div>
