--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -135,9 +135,61 @@ $md-page-layout-content-inner-padding-bottom: 60px;
 @mixin content-mixin-inner() {}
 
 
-// --------------------------------------------------
-// Custom CSS
-// --------------------------------------------------
+//  -----------------------------------
+//  Diffent fixes | START
+//  This CSS contains fixes allover
+//  the page.
+//  -----------------------------------
+
+h1, h2, h3, h4, h5, h6 {
+  @include line-height($font-size-base);
+  font-weight: $font-weight-bold;
+  color: $headings-color;
+  text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.view-header h2 {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+}
+
+#block-popup-cta {
+  overflow: hidden;
+}
+
+#js-view-dom-id-82069330c64efa0f51464bf2cd93f29f3260f65b3d616fc2e014ecdb526401d8 {
+  padding-top: 40px;
+}
+
+.paragraph--type--class-packages .angled-background-inner {
+  margin-bottom: 100px;
+}
+
+.banner-title {
+  font-weight: bold!important;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.material-icons{
+  font-size: 17px;
+}
+
+.layout-navigation {
+  .popover {
+    max-width: 100%;
+    .btn-search {
+      position: absolute;
+      top: 10px;
+      width: 48px;
+      height: 48px;
+      background-color: #00bcff;
+      border-color: #00bcff;
+      right: 10px;
+    }
+  }
+}
 
 .field--name-field-video {
   width: 100%;
@@ -147,285 +199,20 @@ $md-page-layout-content-inner-padding-bottom: 60px;
   transform: translateX(0%);
 }
 
-.view-header h2 {
-    
-    text-transform: uppercase;
-    font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
+.navbar{
+  border-radius: 0px;
+  margin-bottom: 0px;
 }
 
-.view-news .view-content .views-row{
-  background: #EDEEEE;
-  border: 15px solid #ffffff;
-  padding:20px;
-  min-height: 230px;
+.field--name-field-heading{
+  font-family: "Open Sans", Sens-serif !important;
+  font-size: 1.777em !important;
 }
-.fpnews-title{
-  font-size:$font-size-base;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-family: 'Open Sans', sans-serif;
-  color: #000;
+ul li{
+  color: #888;
 }
 
-.fpnews-content p {
-    
-    font-size: 0.85em!important;
-}
-.fpnews-title a{
-  color:#000;
-     font-size: $font-size-small;
-  font-weight: bold;
-    font-size: 0.9em;
-    font-family: 'Open Sans', sans-serif;
-}
-.view-news .view-content .views-row .views-field-body p{
-  font-size: 13px;
-    color: #928f8f;
-    font-size: 0.90em;
-    line-height: 20px;
-    font-family: 'Open Sans', sans-serif;
-    margin-bottom: 20px;
-}
-.view-news .view-content .views-row .field-content{
-  margin-top:10px;
-  margin-bottom:10px;
-}
-.fpnews-date {
-  font-size: $font-size-small;
-  color: #ff6400;
-  font-weight: bold;
-    font-size: 0.9em;
-    font-family: 'Open Sans', sans-serif;
-}
-
-
-.view-news .view-header h2 a{
-  font-size:$font-size-h2;
-  text-transform: uppercase;
-  font-weight: bold;
-  color:#000;
-}
-.view-nyheder-full-page .view-content .views-row {
-  background: #EDEEEE;
-  border: 30px solid #fff;
-  padding: 20px;
-  min-height: 230px;
-}
-
-
-.view-fagpakker-forside .view-content .views-row{
-  border: 0px solid #00a5e2;
-}
-
-h1, h2, h3, h4, h5, h6 {
-
-      @include line-height($font-size-base);
-      font-weight: $font-weight-bold;
-      color: $headings-color;
-      text-transform: uppercase;
-      font-family: 'Open Sans', sans-serif;
-
-    }
-
-#block-popup-cta { overflow: hidden; }
-
-#js-view-dom-id-82069330c64efa0f51464bf2cd93f29f3260f65b3d616fc2e014ecdb526401d8 {
-    
-    padding-top: 40px;
-}
-
-.paragraph--type--class-packages .angled-background-inner { margin-bottom: 100px; }
-
-.banner-title {
-    
-    font-weight: bold!important;
-      font-family: 'Open Sans', sans-serif;
-}
-
-// Fagpakker forside
-
-.view-class-packages-frontpage .view-header{
-  text-transform: uppercase;
-  color: #fff;
-  padding-bottom: 30px;
-  padding-top: 15px;
-    color: #fff;
-    padding-bottom: 30px;
-    padding-top: 15px;
-    font-family: 'Open Sans', sans-serif;
-    line-height: 1.5em;
-    font-size: 20px;
-    font-weight: normal;
-    opacity: 1;
-
-}
-
-.fagpakker-container {
-
-  width: 100%;
-  height: auto;
-  min-height: 350px;
-  max-width: 283px;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  background-position: -90px 0px;
-  transition: 400ms;
-  padding: 0;
-  cursor: pointer;
-  margin-bottom:30px;
-  background-position: top left;
-}
-.Boldspil{
-  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-fodbold.jpg");
-}
-.Fitness{
-  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-fitness_0.jpg");
-}
-.Outdoor{
-  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-outdoor.jpg");
-}
-.Politi{
-  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-politi.jpg");
-}
-.Endurance{
-  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-endurance.jpg");
-}
-.Rejser{
-  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-rejser_0.jpg");
-}
-
-.Boldspil-color{
-  background-color:#00a5e2;
-}
-.Fitness-color{
-  background-color:#FF5300;
-}
-.Outdoor-color{
-  background-color:#9ED200;
-}
-.Politi-color{
-  background-color:#45535D;
-}
-.Endurance-color{
-  background-color:#00C885;
-}
-.Rejser-color{
-  background-color:#ffc400;
-}
-
-.fagpakker-headline a {
-    
-    font-family: 'Open Sans', sans-serif;
-    line-height: 1.5em;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.fagpakker-hovering p {
-    
-    font-family: 'Open Sans', sans-serif;
-    line-height: 1.5em;
-    font-size: 12px;
-    font-weight: bold;
-}
-
-.fagpakker-container:hover > .fagpakker-hovering {
-
-  opacity: 1!important;
-  transition: 400ms;
-  padding: 0;
-}
-
-
-.fagpakker-container:hover .fagpakker-overlay {
-  background: rgba(30,125,150,0.898);
-
-}
-
-.fagpakker-container { overflow: hidden; }
-
-.fagpakker-container .fagpakker-overlay {
-  width: 100%;
-  height: 12vh;
-  position: relative;
-  bottom: 0;
-  -webkit-clip-path: polygon(0 50%, 100% 0, 100% 100%, 0% 100%);
-  clip-path: polygon(0 50%, 100% 0, 100% 100%, 0% 100%);
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  z-index: 1;
-  transition: 300ms;
-  opacity: 0.9;
-  margin-bottom:-1px;
-}
-
-
-.fagpakker-container:hover .fagpakker-overlay:hover {
-  background: rgba(30,125,150,0.898);
-}
-
-
-.fagpakker-overlay h1 {
-
-  font-family: lato;
-  color: #fff;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;;
-  font-size: 1.2em;
-  bottom: 0;
-  padding: 10px;
-  padding-right: 25px;
-  z-index: 2;
-  font-weight: bold;
-}
-
-.fagpakker-overlay h1 a{
-  color: #fff;
-}
-
-.fagpakker-hovering {
-
-  width: 100%;
-  max-width: 283px;
-  height: auto;
-  min-height: 350px;
-  background-color: rgba(0,0,0,0.8);
-  z-index: 0;
-  display: inline-flex;
-  position: absolute;
-  opacity: 0;
-  transition: 400ms;
-  display: flex;
-  padding: 0;
-  justify-content: center;
-  align-items: flex-start;
-
-}
-
-
-.fagpakker-hovering p {
-
-  color: #fff;
-  font-family: Lato, sans-serif;
-  text-transform: uppercase;
-  font-size: 0.8em;
-  letter-spacing: 0.1em;
-  line-height: 19px;
-  width: 100%;
-  padding: 0;
-  text-align: left;
-  padding-top: 60px;
-  padding-left: 18px;
-}
-
-.material-icons{
-  font-size: 17px;
-}
-
+/*
 .related-classes-span{
   margin-top: auto;
   background: #00a5e2;
@@ -449,89 +236,290 @@ border:15px solid #fff;
 display: flex;
 flex-direction: column;
 }
+*/
 
-.teacher-teaches-row{
-  background-color: #00bcff;
-  color: #fff !important;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 25px;
-  padding-bottom: 50px;
-  border-top:25px solid #fff;
-}
-.teacher-teaches-row a{
-  color: #fff !important;
-}
-.teacher-teaches-row h2{
-  color: #fff !important;
-}
-.layout-navigation {
-  .popover {
-    max-width: 100%;  
-      .btn-search {
-      position: absolute;
-      top: 10px;
-      width: 48px;
-      height: 48px;
-      background-color: #00bcff;
-      border-color: #00bcff;
-      right: 10px;
-    }
-  }
-}
-.teacher-c-desc{
-  background-color: #f1f1f1 !important;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 25px;
-  padding-bottom: 50px;
-  border-top:25px solid #fff;
+//  ***********************************
+
+
+
+
+
+//  -----------------------------------
+//  Frontpage news view | START
+//  This CSS is used for the frontpage
+//  news.
+//  -----------------------------------
+
+.view-news .view-content .views-row{
+  background: #EDEEEE;
+  border: 15px solid #ffffff;
+  padding:20px;
+  min-height: 230px;
 }
 
-.view-vih-teacher-teaches-classes .views-field-name-1{
-  background: #00a5e2;
-  min-height: 85px;
-  text-align: center;
-  padding-top: 25px;
-  padding-left: 5px;
-  padding-right: 5px;
-
+.fpnews-title{
+  font-size:$font-size-base;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  color: #000;
 }
 
-.navbar{
-  border-radius: 0px;
-  margin-bottom: 0px;
+.fpnews-content p {
+  font-size: 0.85em!important;
 }
 
-.field--name-field-heading{
-  font-family: "Open Sans", Sens-serif !important;
-  font-size: 1.777em !important;
+.fpnews-title a{
+  color:#000;
+  font-size: $font-size-small;
+  font-weight: bold;
+  font-size: 0.9em;
+  font-family: 'Open Sans', sans-serif;
 }
-ul li{
-  color: #888;
+
+.view-news .view-content .views-row .views-field-body p{
+  font-size: 13px;
+  color: #928f8f;
+  font-size: 0.90em;
+  line-height: 20px;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 20px;
+}
+
+.view-news .view-content .views-row .field-content{
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
+.fpnews-date {
+  font-size: $font-size-small;
+  color: #ff6400;
+  font-weight: bold;
+  font-size: 0.9em;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.view-news .view-header h2 a{
+  font-size:$font-size-h2;
+  text-transform: uppercase;
+  font-weight: bold;
+  color:#000;
+}
+
+.view-nyheder-full-page .view-content .views-row {
+  background: #EDEEEE;
+  border: 30px solid #fff;
+  padding: 20px;
+  min-height: 230px;
+}
+
+//  ***********************************
+
+
+
+
+
+//  -----------------------------------
+//  Frontpage Class Package | START
+//  This CSS is used for the frontpage
+//  class package view.
+//  -----------------------------------
+
+.view-fagpakker-forside .view-content .views-row{
+  border: 0px solid #00a5e2;
+}
+
+.view-class-packages-frontpage .view-header{
+  text-transform: uppercase;
+  color: #fff;
+  padding-bottom: 30px;
+  padding-top: 15px;
+  color: #fff;
+  padding-bottom: 30px;
+  padding-top: 15px;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
+  font-size: 20px;
+  font-weight: normal;
+  opacity: 1;
+}
+
+.fagpakker-container {
+  width: 100%;
+  height: auto;
+  min-height: 350px;
+  max-width: 283px;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-position: -90px 0px;
+  transition: 400ms;
+  padding: 0;
+  cursor: pointer;
+  margin-bottom:30px;
+  background-position: top left;
+}
+
+.Boldspil{
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-fodbold.jpg");
+}
+
+.Fitness{
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-fitness_0.jpg");
+}
+
+.Outdoor{
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-outdoor.jpg");
+}
+
+.Politi{
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-politi.jpg");
+}
+
+.Endurance{
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-endurance.jpg");
+}
+
+.Rejser{
+  background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-rejser_0.jpg");
+}
+
+.Boldspil-color{
+  background-color:#00a5e2;
+}
+
+.Fitness-color{
+  background-color:#FF5300;
+}
+
+.Outdoor-color{
+  background-color:#9ED200;
+}
+
+.Politi-color{
+  background-color:#45535D;
+}
+
+.Endurance-color{
+  background-color:#00C885;
+}
+
+.Rejser-color{
+  background-color:#ffc400;
+}
+
+.fagpakker-headline a {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.fagpakker-hovering p {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.fagpakker-container:hover > .fagpakker-hovering {
+  opacity: 1!important;
+  transition: 400ms;
+  padding: 0;
 }
 
 
+.fagpakker-container:hover .fagpakker-overlay {
+  background: rgba(30,125,150,0.898);
+}
+
+.fagpakker-container {
+  overflow: hidden;
+}
+
+.fagpakker-container .fagpakker-overlay {
+  width: 100%;
+  height: 12vh;
+  position: relative;
+  bottom: 0;
+  -webkit-clip-path: polygon(0 50%, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(0 50%, 100% 0, 100% 100%, 0% 100%);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 1;
+  transition: 300ms;
+  opacity: 0.9;
+  margin-bottom:-1px;
+}
+
+.fagpakker-container:hover .fagpakker-overlay:hover {
+  background: rgba(30,125,150,0.898);
+}
+
+.fagpakker-overlay h1 {
+  font-family: lato;
+  color: #fff;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;;
+  font-size: 1.2em;
+  bottom: 0;
+  padding: 10px;
+  padding-right: 25px;
+  z-index: 2;
+  font-weight: bold;
+}
+
+.fagpakker-overlay h1 a{
+  color: #fff;
+}
+
+.fagpakker-hovering {
+  width: 100%;
+  max-width: 283px;
+  height: auto;
+  min-height: 350px;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 0;
+  display: inline-flex;
+  position: absolute;
+  opacity: 0;
+  transition: 400ms;
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.fagpakker-hovering p {
+
+  color: #fff;
+  font-family: Lato, sans-serif;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 0.1em;
+  line-height: 19px;
+  width: 100%;
+  padding: 0;
+  text-align: left;
+  padding-top: 60px;
+  padding-left: 18px;
+}
+
+//  ***********************************
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-/* Fagpakker oversigt */
+//  -----------------------------------
+//  Class Package Class CSS | START
+//  This CSS is used for the Class
+//  package class CSS
+//  -----------------------------------
 
 .fp-container {
-
   background: white;
   display: flex;
   justify-content: center;
@@ -544,22 +532,18 @@ ul li{
   margin-bottom:30px;
 }
 
-
-
 .fp-container:hover > .fp-hovering {
-
   opacity: 1!important;
   transition: 400ms;
   padding: 0;
 }
 
-
 .fp-container:hover .fp-overlay {
   background: rgba(30,125,150,0.898);
-
 }
 
-.fp-container { overflow: hidden; }
+.fp-container { overflow: hidden;
+}
 
 .fp-container .fp-overlay {
   width: 100%;
@@ -574,17 +558,13 @@ ul li{
   align-items: flex-end;
   z-index: 1;
   transition: 300ms;
-
 }
-
 
 .fp-container:hover .fp-overlay:hover {
   background: #00a5e2;
 }
 
-
 .fp-overlay h1 {
-
   font-family: lato;
   color: #fff;
   letter-spacing: 0.1em;
@@ -598,14 +578,10 @@ ul li{
 }
 
 .fp-overlay a {
-
   color: #fff;
-
 }
 
-
 .fp-hovering {
-
   height: 20vh;
   background-color: rgba(0,0,0,0.8);
   z-index: 0;
@@ -617,12 +593,9 @@ ul li{
   padding: 0;
   justify-content: center;
   align-items: flex-start;
-
 }
 
-
 .fp-hovering p {
-
   color: #fff;
   font-family: Lato, sans-serif;
   text-transform: uppercase;
@@ -644,3 +617,53 @@ ul li{
   padding-bottom: 50px;
   border-top: 25px solid #fff;
 }
+
+//  ***********************************
+
+
+
+
+
+//  -----------------------------------
+//  Teacher related CSS | START
+//  This CSS is used for the teachers
+//  and relations
+//  -----------------------------------
+
+.teacher-teaches-row{
+  background-color: #00bcff;
+  color: #fff !important;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  border-top:25px solid #fff;
+}
+
+.teacher-teaches-row a{
+  color: #fff !important;
+}
+
+.teacher-teaches-row h2{
+  color: #fff !important;
+}
+
+.teacher-c-desc{
+  background-color: #f1f1f1 !important;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  border-top:25px solid #fff;
+}
+
+.view-vih-teacher-teaches-classes .views-field-name-1{
+  background: #00a5e2;
+  min-height: 85px;
+  text-align: center;
+  padding-top: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+//  ***********************************
